fix: spacing on searchbar

--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -12,7 +12,6 @@
   float: right;
   display: flex;
   justify-content: space-between;
-  width: 30%;
 }
 .callBackButton {
   background: none;
@@ -84,6 +83,7 @@
 .searchContainer {
   display: flex;
   align-items: center;
+  margin-left: 1rem;
 }
 
 .searchContainer input[type=text] {
